apigate/tests/ui/fail/ctx_not_mut.rs
#[apigate::hook]
async fn hook(ctx: &apigate::PartsCtx<'_>) -> apigate::HookResult {
    let _ = ctx;
    Ok(())
}

fn main() {}
