apigate/tests/ui/fail/ctx_not_mut.stderr
error: `PartsCtx` parameter must be `&mut PartsCtx`
 --> tests/ui/fail/ctx_not_mut.rs:2:20
  |
2 | async fn hook(ctx: &apigate::PartsCtx<'_>) -> apigate::HookResult {
  |                    ^
